Spacing issues on blog

--- a/css/_styles.scss
+++ b/css/_styles.scss
@@ -486,15 +486,14 @@ a.post-continue, a.pagination-link, a.bold-link {
   margin-bottom: 1.5rem;
 }
 
-.blog-post > p {
-  padding: 0.5rem 1em 0 1em;
-  max-width: $page-width;
-}
-
-.blog-post > .post-content > p {
-  line-height: 1.6;
-  letter-spacing: -0.02em;
-  max-width: $page-width;
+.post-content {
+  p, h1, h2, h3, h4, h5, h6 {
+    padding-top: 0.5rem;
+    line-height: 1.6;
+    letter-spacing: -0.02em;
+    max-width: $page-width;
+    margin: 0 auto;
+  }
 }
 
 .post-header-wrap {
